--- a/infra/ingress/values-nginx.yaml
+++ b/infra/ingress/values-nginx.yaml
@@ -1,7 +1,9 @@
 # Minimal values for ingress-nginx with kind
 controller:
   replicaCount: 1
+  hostNetwork: true
+  dnsPolicy: ClusterFirstWithHostNet
   service:
-    type: NodePort
+    type: ClusterIP
   admissionWebhooks:
     enabled: true
