--- a/infra/platform/gitea/ingress.yaml
+++ b/infra/platform/gitea/ingress.yaml
@@ -3,9 +3,8 @@ kind: Ingress
 metadata:
   name: gitea
   namespace: platform
-  annotations:
-    kubernetes.io/ingress.class: nginx
 spec:
+  ingressClassName: nginx
   tls:
     - hosts: ["gitea.local.test"]
       secretName: platform-tls
