--- a/infra/platform/jenkins/ingress.yaml
+++ b/infra/platform/jenkins/ingress.yaml
@@ -3,9 +3,8 @@ kind: Ingress
 metadata:
   name: jenkins
   namespace: platform
-  annotations:
-    kubernetes.io/ingress.class: nginx
 spec:
+  ingressClassName: nginx
   tls:
     - hosts: ["jenkins.local.test"]
       secretName: platform-tls
