--- a/infra/platform/gitea/secret-env.yaml
+++ b/infra/platform/gitea/secret-env.yaml
@@ -11,3 +11,6 @@ stringData:
   GITEA__server__START_SSH_SERVER: "false"
   GITEA__service__DISABLE_REGISTRATION: "false"
   GITEA__server__PROTOCOL: http
+  GITEA__database__DB_TYPE: sqlite3
+  GITEA__database__PATH: /data/gitea/gitea.db
+  GITEA__security__INSTALL_LOCK: "true"
